2014-04-21  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Selecting a subtitle track correctly sets the
        »character set« drop-down box if no character set was set for this
        track. Fixes #1008.

        * mmg: enhancement: the subtitle character set cannot be set
        anymore for subtitle tracks read from Matroska files as mkvmerge
        ignores that setting for said container anyway (text subs are
        always encoded in UTF-8 in Matroska).

2014-04-20  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: enhancement: mmg will look for the »mkvmerge« executable in
        the same directory as the »mmg« executable is located it if the
        location hasn't been set by the user on all operating systems
        (before: only on Windows). Improves detection if »mkvmerge« is not
        in the $PATH.

2014-04-18  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.9.1.

        * mkvmerge: bug fix: fixed huge memory usage when probing files
        (it was reading the whole file into memory for that).

        * Released v6.9.0.

        * all: new feature: added a Brazilian Portuguese translation of
        the programs by Thiago Kühn (see AUTHORS).

        * mkvpropedit, mmg's header editor: bug fix: fixed a failed
        assertion in libEBML when writing the same changes twice to
        certain files (those for which a seek head with a single entry
        pointing to the elements modified by mkvpropedit/mmg's header
        editor; e.g. x264 creates such files). Fixes #1007.

2014-03-22  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: reading fonts embedded in SSA/ASS files was
        sometimes truncating the attachments created from them. Fixes
        #1003.

        * mkvmerge: bug fix: fixed display of very large IDs during
        attachment extraction.

        * mkvmerge: enhancement: improved file type detection speed for
        text subtitle formats.
