@@ -1,3 +1,8 @@
+2014-05-04  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: enhancement: added the attachment UID to the verbose
+        identification output of Matroska files.
+
 2014-04-21  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: Selecting a subtitle track correctly sets the
